# storytime

./: .gitignore  LionAndMouse_Script.json  generate_icon.py  storytime.entitlements
.github/workflows/: build.yml
App/: AppDelegate.swift  HomeView.swift  StoryTimeApp.swift
Assets.xcassets/AppIcon.appiconset/: Contents.json
Design/: AIGlowModifier.swift  DesignSystem.swift
Models/: Book.swift  ExpressiveScript.swift  PreloadedLibrary.swift
Persistence/: PersistenceController.swift  PlaybackProgress.swift
Services/: AudioInputManager.swift  CloudSharingService.swift  FamilySyncManager.swift  SecureStorageService.swift  SpeechRecognizer.swift  SpouseInviteService.swift  StoreKitService.swift  StoryPrefetchService.swift  VoiceTokenizer.swift
StoryTime.xcdatamodeld/: .xccurrentversion
StoryTime.xcdatamodeld/StoryTime.xcdatamodel/: contents
Views/Components/: BookCard.swift  ButtonStyles.swift  CharacterNarratorView.swift  DreamscapeBackground.swift  GlowingOrbButton.swift  LiquidGlassCard.swift  LiquidGlassOrb.swift  SharingUIComponents.swift  SyncSuccessView.swift  VoiceArrivalSheet.swift
Views/Dashboard/: ParentDashboardView.swift
Views/Onboarding/: ModelDownloadView.swift  OnboardingView.swift  SuccessView.swift  WelcomeView.swift
Views/Paywall/: PaywallBottomSheet.swift
Views/Player/: PlayerView.swift  StoryFinishView.swift
VoiceboxCore/: Package.swift
scripts/: build_xcframework.sh
storytime.xcodeproj/: project.pbxproj
voicebox_mobile_bridge/: Cargo.toml  build-ios.sh  build.rs
voicebox_mobile_bridge/src/: lib.rs  voicebox.udl
(+6 files in other folders)
