[package]
name = "voicebox_mobile_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
name = "voicebox_bridge"

[dependencies]
# Candle-based Qwen3-TTS by TrevorS — version 0.3+ has hub + metal features.
# The version "0.1" in the original Cargo.toml matched the older juntao/tch crate;
# this is corrected to "0.3" for the current API documented at
# https://github.com/TrevorS/qwen3-tts-rs
qwen3-tts = { git = "https://github.com/TrevorS/qwen3-tts-rs", features = ["hub", "metal"] }

# UniFFI with tokio async bridge + cli for running uniffi-bindgen via cargo run
uniffi = { version = "0.31.0", features = ["tokio", "build", "cli"] }

# Tokio runtime for spawn_blocking (runs synchronous inference off the UI thread)
tokio = { version = "1", features = ["full"] }

# WAV encoding (f32 PCM → 16-bit WAV bytes returned to Swift)
hound = "3.5"

# Error context
anyhow = "1.0"

# Error derive macros — Display impls for VoiceboxError (surfaced to Swift as
# localizedDescription).  Listed explicitly; do not rely on transitive pull.
thiserror = "1"

[build-dependencies]
# Generates Rust scaffolding from src/voicebox.udl at compile time.
uniffi = { version = "0.31.0", features = ["build"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
